fix: update user service